--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "todolist-01",
-  "private": true,
+  "private": "true",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "tsc -b && vite build",
     "test": "vitest",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "pnpm run build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
